--- a/frontend/projects/upgrade/src/app/shared/components/common-dialog/common-dialog.component.html
+++ b/frontend/projects/upgrade/src/app/shared/components/common-dialog/common-dialog.component.html
@@ -1,27 +1,27 @@
-<mat-card class="common-form-dialog">
+<mat-card class="common-dialog">
   <!-- top part of the dialog -->
   <mat-card-header class="header-container">
-    <mat-card-title class="header-title">{{ title }}</mat-card-title>
+    <mat-card-title class="header-title">{{ configData.title }}</mat-card-title>
   </mat-card-header>
 
-  <mat-dialog-content class="form-content-container">
-    <!-- ng-template injected from params.formComponent -->
-    <ng-template #formContainer></ng-template>
+  <mat-dialog-content class="child-content-container">
+    <!-- ng-template injected from params.childContentComponent -->
+    <ng-template #childContentComponentContainer></ng-template>
   </mat-dialog-content>
 
   <!-- bottom part of the dialog -->
   <mat-card-footer class="footer-container">
     <mat-dialog-actions align="end">
       <button class="dialog-action-btn cancel-btn" mat-flat-button [mat-dialog-close]="'goodbye'">
-        {{ cancelBtnLabel }}
+        {{ configData.cancelBtnLabel }}
       </button>
       <button
         class="dialog-action-btn primary-btn"
         mat-flat-button
-        color="primary"
+        [color]="configData.primaryActionBtnColor"
         (click)="onPrimaryActionBtnClicked()"
       >
-        {{ primaryActionBtnLabel }}
+        {{ configData.primaryActionBtnLabel }}
       </button>
     </mat-dialog-actions>
   </mat-card-footer>
