--- a/frontend/projects/upgrade/src/styles.scss
+++ b/frontend/projects/upgrade/src/styles.scss
@@ -3,7 +3,7 @@
 @import '@danielmoncada/angular-datetime-picker/assets/style/picker.min.css';
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,700|Material+Icons');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800&display=swap');
-@import '~jsoneditor/dist/jsoneditor.min.css';
+@import 'jsoneditor/dist/jsoneditor.min.css';
 @include mat.all-component-typographies();
 @include mat.core();
 
