--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card-table/feature-flag-root-section-card-table.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page-content/feature-flag-root-section-card/feature-flag-root-section-card-table/feature-flag-root-section-card-table.component.html
@@ -1,7 +1,15 @@
 <div class="flags-list-container">
   <div scroll (scrolled)="fetchFlagsOnScroll()" class="flags-list-table-container" #tableContainer>
     <mat-progress-bar class="spinner" mode="indeterminate" *ngIf="isLoading$ | async"></mat-progress-bar>
-    <table class="flags-list" mat-table [dataSource]="dataSource$" matSort (matSortChange)="changeSorting($event)">
+    <table
+      class="flags-list"
+      mat-table
+      [dataSource]="dataSource$"
+      matSort
+      (matSortChange)="changeSorting($event)"
+      [matSortActive]="flagSortKey$ | async"
+      [matSortDirection]="flagSortAs$ | async | lowercase"
+    >
       <ng-container [matColumnDef]="FLAG_ROOT_COLUMN_NAMES.NAME">
         <th class="ft-12-700" mat-header-cell *matHeaderCellDef mat-sort-header>
           <span [matTooltip]="FLAG_TRANSLATION_KEYS.NAME | translate" matTooltipPosition="above">
@@ -19,7 +27,7 @@
           <ng-template #flagNameEllipsis>
             <span
               [matTooltip]="flag.name"
-              class="flag-name",
+              class="flag-name"
               matTooltipPosition="above"
             >
               {{ flag.name | truncate: 30 }}
@@ -39,7 +47,9 @@
 
       <ng-container [matColumnDef]="FLAG_ROOT_COLUMN_NAMES.STATUS">
         <th class="ft-12-700" mat-header-cell *matHeaderCellDef mat-sort-header>
-          <span [matTooltip]="FLAG_TRANSLATION_KEYS.STATUS | translate" matTooltipPosition="above">{{ FLAG_TRANSLATION_KEYS.STATUS | translate | uppercase }}</span>
+          <span [matTooltip]="FLAG_TRANSLATION_KEYS.STATUS | translate" matTooltipPosition="above">
+            {{ FLAG_TRANSLATION_KEYS.STATUS | translate | uppercase }}
+          </span>
         </th>
         <td class="ft-12-600" mat-cell *matCellDef="let flag">
           <app-common-status-indicator-chip [chipClass]="flag.status"></app-common-status-indicator-chip>
@@ -58,7 +68,7 @@
       </ng-container>
 
       <ng-container [matColumnDef]="FLAG_ROOT_COLUMN_NAMES.APP_CONTEXT">
-        <th class="ft-12-700" mat-header-cell *matHeaderCellDef mat-sort-header>
+        <th class="ft-12-700" mat-header-cell *matHeaderCellDef>
           <span [matTooltip]="FLAG_TRANSLATION_KEYS.APP_CONTEXT | translate" matTooltipPosition="above">
             {{ FLAG_TRANSLATION_KEYS.APP_CONTEXT | translate | uppercase }}
           </span>
@@ -69,8 +79,10 @@
       </ng-container>
 
       <ng-container [matColumnDef]="FLAG_ROOT_COLUMN_NAMES.TAGS">
-        <th class="ft-12-700" mat-header-cell *matHeaderCellDef mat-sort-header>
-          <span [matTooltip]="FLAG_TRANSLATION_KEYS.TAGS | translate" matTooltipPosition="above">{{ FLAG_TRANSLATION_KEYS.TAGS | translate | uppercase }}</span>
+        <th class="ft-12-700" mat-header-cell *matHeaderCellDef>
+          <span [matTooltip]="FLAG_TRANSLATION_KEYS.TAGS | translate" matTooltipPosition="above">
+            {{ FLAG_TRANSLATION_KEYS.TAGS | translate | uppercase }}
+          </span>
         </th>
         <td class="ft-12-600" mat-cell *matCellDef="let flag">
           <mat-chip *ngFor="let tag of flag.tags" class="tag">{{ tag }}</mat-chip>
@@ -78,7 +90,7 @@
       </ng-container>
 
       <ng-container [matColumnDef]="FLAG_ROOT_COLUMN_NAMES.EXPOSURES">
-        <th class="ft-12-700" mat-header-cell *matHeaderCellDef mat-sort-header>
+        <th class="ft-12-700" mat-header-cell *matHeaderCellDef>
           <span [matTooltip]="FLAG_TRANSLATION_KEYS.EXPOSURES | translate" matTooltipPosition="above">
             {{ FLAG_TRANSLATION_KEYS.EXPOSURES | translate | uppercase }}
           </span>
