--- a/frontend/projects/upgrade/src/app/features/dashboard/profile/components/metrics/metrics.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/profile/components/metrics/metrics.component.html
@@ -94,12 +94,17 @@
           <th mat-header-cell *matHeaderCellDef class="ft-12-700">
             {{ 'query.table-context.text' | translate }}
           </th>
-          <td class="ft-12-600" mat-cell *matCellDef="let element">
-            <mat-chip-row *ngFor="let contextTag of element.context" class="context-chip">
-              <span>
-                {{ contextTag }}
-              </span>
-            </mat-chip-row>
+          <td class="ft-12-600" mat-cell *matCellDef="let metric">
+            <mat-chip-listbox class="dense-2">
+              <mat-chip
+                *ngFor="let contextTag of metric.context"
+                (click)="filterMetricsByChips(contextTag, MetricSearchKey.CONTEXT)"
+              >
+                <span class="chip-label">
+                  {{ contextTag }}
+                </span>
+              </mat-chip>
+            </mat-chip-listbox>
           </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
