--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-details-page-header/common-details-page-header.component.html
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-details-page-header/common-details-page-header.component.html
@@ -2,6 +2,6 @@
   <span class="ft-14-400 breadcrumb">
     <a [routerLink]="['/', rootLink]" class="root-link">{{ rootName | translate }}</a>
     >
-    <span>{{ detailsName | translate }}</span>
+    <b>{{ detailsName | translate }}</b>
   </span>
 </div>
