Disallow Importing Stratification Factors for Users with the 'Reader' Role

--- a/frontend/projects/upgrade/src/app/features/dashboard/experiment-users/components/stratification-factor-list/stratification-factor-list.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/experiment-users/components/stratification-factor-list/stratification-factor-list.component.html
@@ -5,6 +5,7 @@
     </div>
     <div>
       <button
+        *ngIf="(permissions$ | async)?.stratifications.create"
         (click)="openImportStratificationsDialog()"
         mat-flat-button
         color="primary"
